--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 body {
   margin: 0;
   padding: 0;
-  color: "#000000"
+  background: #ffffff;
+  color: "#000000";
+  font-family: 'Lato', sans-serif;
 }
